live-examples/css-examples/lists/list-style.css
.default-example {
    font-size: 1.2rem;
}

#example-element {
    width: 100%;
    background: #f1f8ff30;
}

.output section {
    text-align: left;
    flex-direction: column;
}

.output hr {
    width: 50%;
    color: lightgray;
    margin: 0.5em;
}

.output .note {
    font-size: 0.8rem;
}

@counter-style space-counter {
    symbols: '\1F680''\1F6F8''\1F6F0''\1F52D';
    suffix: ' ';
}

